--- a/GameApps/Base.lproj/Main.storyboard
+++ b/GameApps/Base.lproj/Main.storyboard
@@ -16,6 +16,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="W6d-rv-iDT">
+                                <rect key="frame" x="0.0" y="404" width="393" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="sV3-kp-85q">
                                 <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -35,6 +39,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="GameTableView" destination="sV3-kp-85q" id="kVc-oV-fYM"/>
+                        <outlet property="loadingIndicator" destination="W6d-rv-iDT" id="ajv-Yn-1ca"/>
                         <segue destination="aTa-e2-VzQ" kind="show" identifier="moveToDetail" id="faJ-cX-qtp"/>
                     </connections>
                 </viewController>
