--- a/GameApps/Base.lproj/Main.storyboard
+++ b/GameApps/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HjQ-Kh-2jl">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,15 +13,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GameApps" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="W6d-rv-iDT">
-                                <rect key="frame" x="0.0" y="404" width="393" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="W6d-rv-iDT">
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
                             </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="sV3-kp-85q">
-                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <rect key="frame" x="0.0" y="44" width="320" height="475"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -29,9 +28,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sV3-kp-85q" secondAttribute="trailing" id="0md-Dl-3s1"/>
+                            <constraint firstItem="W6d-rv-iDT" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="4da-Kp-orx"/>
                             <constraint firstItem="sV3-kp-85q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7Ub-7S-Ya6"/>
                             <constraint firstItem="sV3-kp-85q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GCH-Ng-tIa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sV3-kp-85q" secondAttribute="bottom" id="SG8-If-VsA"/>
+                            <constraint firstItem="W6d-rv-iDT" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="2.5" id="XFX-sh-RJY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Daftar Game" id="ipp-ca-YDi">
@@ -47,17 +48,49 @@
             </objects>
             <point key="canvasLocation" x="1923" y="4"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail-->
         <scene sceneID="3oY-9P-m5F">
             <objects>
-                <viewController id="aTa-e2-VzQ" sceneMemberID="viewController">
+                <viewController id="aTa-e2-VzQ" customClass="DetailViewController" customModule="GameApps" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="p0z-K9-LF8">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hOA-rc-Ia0">
+                                <rect key="frame" x="10" y="54" width="300" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="Aw3-lx-4AP"/>
+                                    <constraint firstAttribute="height" constant="150" id="B7v-Ap-lnK"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOj-0c-f1v">
+                                <rect key="frame" x="10" y="212" width="50" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="69u-WY-ePv">
+                                <rect key="frame" x="150" y="119" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ZXv-h3-Gwv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LOj-0c-f1v" secondAttribute="trailing" constant="10" id="3I8-Iv-iVs"/>
+                            <constraint firstItem="69u-WY-ePv" firstAttribute="centerX" secondItem="hOA-rc-Ia0" secondAttribute="centerX" id="7Xo-GC-tlr"/>
+                            <constraint firstItem="hOA-rc-Ia0" firstAttribute="centerX" secondItem="p0z-K9-LF8" secondAttribute="centerX" id="VAU-Ym-vVO"/>
+                            <constraint firstItem="69u-WY-ePv" firstAttribute="centerY" secondItem="hOA-rc-Ia0" secondAttribute="centerY" id="gI9-Xx-bMF"/>
+                            <constraint firstItem="LOj-0c-f1v" firstAttribute="top" secondItem="hOA-rc-Ia0" secondAttribute="bottom" constant="8" id="lme-yK-tfu"/>
+                            <constraint firstItem="hOA-rc-Ia0" firstAttribute="top" secondItem="ZXv-h3-Gwv" secondAttribute="top" constant="10" id="sLb-nA-VoI"/>
+                            <constraint firstItem="LOj-0c-f1v" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="u5s-EQ-chE"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="i9a-PL-8Rx"/>
+                    <navigationItem key="navigationItem" title="Detail" id="i9a-PL-8Rx"/>
+                    <connections>
+                        <outlet property="gameImageView" destination="hOA-rc-Ia0" id="VXJ-p3-i0E"/>
+                        <outlet property="gameTitleLabel" destination="LOj-0c-f1v" id="gZP-LR-VFZ"/>
+                        <outlet property="imageLoadingIndicator" destination="69u-WY-ePv" id="1u2-BL-E5a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1R3-TJ-S5p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -70,7 +103,7 @@
                     <tabBarItem key="tabBarItem" title="Menu Utama" image="homekit" catalog="system" id="jxK-Up-Wvv"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="w21-ls-E5M">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -106,7 +139,7 @@
             <objects>
                 <viewController id="L50-7s-vZF" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rcd-mL-Agt">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="gZp-Zj-PoH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -126,7 +159,7 @@
                     <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="yV4-if-KqN"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ciT-QG-qms">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
